Sun Sep 14 16:58:34 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (get_source_encoding): Assume ISO-8859-1 source
	  encoding if it's unknown (e.g. 'man -l').
	  (get_default_device): source_encoding can no longer be NULL.
	* src/man.c (make_roff_command): Likewise.

Sun Sep 14 16:45:43 BST 2003  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (EXAMPLES, ENVIRONMENT, HISTORY): Change a few
	  stray hyphens to dashes.

Sun Sep 14 16:37:56 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (get_source_encoding,
	  get_standard_output_encoding, get_default_device,
	  get_roff_encoding, get_output_encoding, get_less_charset):
	  Simplify using new table element struct types.

Sun Sep 14 16:24:00 BST 2003  Colin Watson  <cjwatson@debian.org>

	Make locales like ru_RU.UTF-8 that need the ascii8 device but UTF-8
	output work. This involves a good deal of restructuring.

	* src/encodings.c (directory_table): Remove a completed TODO
	  comment.
	  (directory_table, charset_table, device_table): Name array element
	  struct types in order to abbreviate code later.
	  (device_table): Split less_charset members out into a new table,
	  less_charset_table. They really depend on the locale charset, but
	  aren't quite appropriate for charset_table. Use "iso8859" rather
	  than "latin1", and add KOI8-R.
	  (device_table): Add output_encoding member, which is almost the
	  inverse of charset_table but slightly different for ascii8.
	  (compatible_encodings): New function to figure out if a source
	  encoding and a roff encoding are compatible.
	  (get_default_device): Take new source_encoding argument so that we
	  can make ru_RU.UTF-8 use the ascii8 device and an iconv pipe
	  rather than utf8 directly. Drop through to the fallback default
	  device if none of the predefined entries in charset_table are
	  compatible when considering the source encoding.
	  (get_roff_encoding): Split LESSCHARSET handling out into a new
	  function ...